refactor: virtual threads